add: new libraries and tests